# AG-AISOFTDEV

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER_DEPLOYMENT_INSTRUCTIONS.md  Daily agenda.ipynb  Dockerfile  GEMINI.md  README.md  WARP.md  app.py  chat_ui.py  day5.html  day6.html  day7.html  day8.html  index.html  main.py  models.json  plantuml.py  pyproject.toml  pytest.ini  requirements.txt  sample.jsx  setup.md  test_api_keys.py  test_db_setup.py  test_dependency.py  test_google_image_generation.ipynb  test_image_edit.py  test_image_generation.py  test_results.txt  test_text_generation.py  utils.py
Supporting Materials/: Artifacts_Guide.md  Deployment_Guide_Onboarding_Tool.md  Docker_Guide.md  Environment_Setup_Guide.md  How to View Your React Components Locally.md  How_to_View_Your_React_Components_Locally.md  Productionizing_Utils.md  Starter_Utils_Demo.ipynb
app/: day8_login_monolithic.jsx  day8_login_refactored.jsx  main.py  main_in_memory.py
artifacts/: Dockerfile  README.md  adr_001_database_choice.md  day1_prd.md  day1_sp_library_user_stories.json  day1_user_stories.json  design_review.md  image_explanation.md  log.md  log_template.md  pipeline_results.md  refactored_component.jsx  requirements.txt  schema.sql  seed_data.sql
async_tests/: test_async_llm.py
frontend_preview/: README.md  component.jsx  start_server.bat
myapp/: __init__.py  database.py
slides/: day1.html  day2.html  day3.html  day4.html  day7.html
templates/: adr_template.md
tests/: conftest.py  test_artifact_helpers.py  test_artifacts.py  test_clean_llm_output.py  (+12 more)
(+106 files in other folders)
